--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -22,7 +22,7 @@ jobs:
         go-version: '1.23'
 
     - name: Build
-      run: go build -o leet-code -v ./...
+      run: go build -v ./...
 
     - name: Test
       run: go test -v ./...
